fix alignment

--- a/css/custom.css
+++ b/css/custom.css
@@ -6,6 +6,14 @@ body {
 
 h1, h2 {
   text-shadow: 2px 2px 2px #081416;
+}
+
+h1 {
+  padding-top: 0;
+  margin-top: 0;
+}
+
+h2 {
   margin-top: 1em; 
 }
 
